Fixed overlapping elements bug

--- a/static/image.css
+++ b/static/image.css
@@ -51,6 +51,7 @@ body, html {
   
   }
   
+
   .container {
     margin-top: 105px;
     height:88%;
@@ -58,12 +59,14 @@ body, html {
     margin-left: 15px;
     color: #b7bdf8;
     font-size: 33px;
-    overflow: auto;
     word-wrap: break-word;
+    overflow: auto;
+
   }
+
   .container::-webkit-scrollbar { 
     display: none; 
-}
+  } 
 
 
   
@@ -86,8 +89,8 @@ body, html {
 
 .homebtn {
     position: fixed;
-    width: 100%;
-    height: 100%;
+    width: 10px;
+    height: 10px;
     margin-top: 18px;
     margin-left: 90px;
     color: #b7bdf8;
